--- a/NeonShooter.Core/NeonShooter.Core.csproj
+++ b/NeonShooter.Core/NeonShooter.Core.csproj
@@ -20,4 +20,9 @@
   <ItemGroup>
     <Folder Include="Game\" />
   </ItemGroup>
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>NeonShooter.Core.Test</_Parameter1>
+    </AssemblyAttribute>
+</ItemGroup>
 </Project>
