Ignore obj folders

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@
 /NeonShooter.WindowsDX/obj/Debug/net6.0-windows/NeonShooter.WindowsDX.dll
 /NeonShooter.WindowsDX/bin/Debug/net6.0-windows/NeonShooter.WindowsDX.pdb
 /NeonShooter.WindowsDX/obj/Debug/net6.0-windows/NeonShooter.WindowsDX.pdb
+/Monogame.sln.DotSettings.user
+/NeonShooter.WindowsDX/obj/
+/NeonShooter.Core/obj/
