--- a/NeonShooter.Core/NeonShooter.Core.csproj
+++ b/NeonShooter.Core/NeonShooter.Core.csproj
@@ -19,6 +19,7 @@
     <None Remove="Content\NeonShooter.mgcb" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="LiteNetLib" Version="1.1.0" />
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303">
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
