--- a/NeonShooter.Core/NeonShooter.Core.csproj
+++ b/NeonShooter.Core/NeonShooter.Core.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="LiteNetLib" Version="1.1.0" />
+    <PackageReference Include="MonoGame.Extended.Graphics" Version="3.8.0" />
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303">
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
