Update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ bin/
 /Monogame.sln.DotSettings.user
 WarlockGame.sln.DotSettings.user
 
+/WarlockGame.sln.DotSettings.user
+/.idea/.idea.Monogame/.idea/workspace.xml
