--- a/WarlockGame.WindowsDX/WarlockGame.WindowsDX.csproj
+++ b/WarlockGame.WindowsDX/WarlockGame.WindowsDX.csproj
@@ -32,4 +32,8 @@
       <Link>Content\Art</Link>
     </Folder>
   </ItemGroup>
+  <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
+    <Message Text="Restoring dotnet tools" Importance="High" />
+    <Exec Command="dotnet tool restore" />
+  </Target>
 </Project>
