--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ WarlockGame.sln.DotSettings.user
 /WarlockGame.sln.DotSettings.user
 /.idea/.idea.Monogame/.idea/workspace.xml
 /.idea/
+/WarlockGame.WindowsDX/.mgstats
