Use a config file to connect to an IP address

--- a/WarlockGame.Core/WarlockGame.Core.csproj
+++ b/WarlockGame.Core/WarlockGame.Core.csproj
@@ -15,6 +15,9 @@
     <Compile Remove="Content\obj\**" />
     <EmbeddedResource Remove="Content\obj\**" />
     <None Remove="Content\obj\**" />
+    <None Update="Config.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="LiteNetLib" Version="1.2.0" />
@@ -25,7 +28,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\bin\Windows" />
-    <Folder Include="Game\" />
   </ItemGroup>
   <ItemGroup>
     <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
