--- a/WarlockGame.Core/WarlockGame.Core.csproj
+++ b/WarlockGame.Core/WarlockGame.Core.csproj
@@ -34,4 +34,12 @@
   <ItemGroup>
     <ProjectReference Include="..\PS4Mono\PS4Mono.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="..\.gitignore">
+      <Link>.gitignore</Link>
+    </Content>
+    <Content Include="..\README.md">
+      <Link>README.md</Link>
+    </Content>
+  </ItemGroup>
 </Project>
