--- a/WarlockGame.Core.Test/WarlockGame.Core.Test.csproj
+++ b/WarlockGame.Core.Test/WarlockGame.Core.Test.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="FluentAssertions" Version="6.7.0" />
+        <PackageReference Include="FluentAssertions" Version="[7.0.0]" />
         <PackageReference Include="JetBrains.Annotations" Version="2024.3.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0-preview-23503-02" />
         <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
@@ -26,6 +26,10 @@
 
     <ItemGroup>
       <ProjectReference Include="..\WarlockGame.Core\WarlockGame.Core.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Integration\" />
     </ItemGroup>
 
 </Project>
