Do more stuff that still doesn't work

--- a/WarlockGame.WindowsDX/WarlockGame.WindowsDX.csproj
+++ b/WarlockGame.WindowsDX/WarlockGame.WindowsDX.csproj
@@ -5,6 +5,7 @@
     <TieredCompilation>false</TieredCompilation>
     <UseWindowsForms>true</UseWindowsForms>
     <TargetFramework>net7.0-windows</TargetFramework>
+    <LangVersion>preview</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationManifest>app.manifest</ApplicationManifest>
