--- a/WarlockGame.Core/WarlockGame.Core.csproj
+++ b/WarlockGame.Core/WarlockGame.Core.csproj
@@ -26,6 +26,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="10.0.0-preview.3.25171.5" />
     <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="10.0.0-preview.3.25171.5" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Ini" Version="10.0.0-preview.3.25171.5" />
+    <PackageReference Include="MonoGame.Extended" Version="4.1.0" />
     <PackageReference Include="MonoGame.Extended.Graphics" Version="3.8.0" />
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.3">
       <PrivateAssets>All</PrivateAssets>
