Add new spell: Refraction shield Add collision filters Fix oriented rectangle collision logic Add debug/temp visualization for all bounding type Expand max spells to 10 Add behavior to limit collisions to one per entity pair Allow entities to let projectiles pass through Add development option to auto-restart game on player joining the server

--- a/WarlockGame.Core/settings.ini
+++ b/WarlockGame.Core/settings.ini
@@ -7,7 +7,11 @@ spell2=W
 spell3=E
 spell4=R
 spell5=T
-spell6=F
+spell6=D
+spell7=F
+spell8=G
+spell9=C
+spell10=V
 exit=Escape
 pause=p
-openCommandInput=Enter 
+openCommandInput=Enter
