Add playerIds to a bunch of stuff Make diffraction shield not affect friendly projectiles

--- a/WarlockGame.Core/WarlockGame.Core.csproj
+++ b/WarlockGame.Core/WarlockGame.Core.csproj
@@ -33,6 +33,7 @@
     </PackageReference>
     <PackageReference Include="OneOf" Version="3.0.271" />
     <PackageReference Include="TextCopy" Version="6.2.1" />
+    <PackageReference Include="ZLinq" Version="1.4.6" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\bin\Windows" />
