Add mouse look with middle mouse button

--- a/WarlockGame.Core/settings.ini
+++ b/WarlockGame.Core/settings.ini
@@ -18,3 +18,9 @@ spell10=V
 exit=Escape
 pause=p
 openCommandInput=Enter
+
+[interface]
+edgeScrollWidth=40
+edgeScrollSpeed=7
+keyScrollSpeed=6
+mouseLookSensitivity=1
