Add default scroll-past-map-edge

--- a/WarlockGame.Core/settings.ini
+++ b/WarlockGame.Core/settings.ini
@@ -23,4 +23,5 @@ openCommandInput=Enter
 edgeScrollWidth=15
 edgeScrollSpeed=10
 keyScrollSpeed=8
-mouseLookSensitivity=1
+middleMouseLookSensitivity=1
+mapEdgeScrollLimitBoundary=100
