Add powerful flame strike spell accessable from taking the associated perk.
Allow visualizing all entity bounding boxes with configuration value.

Greatly improved how visual effects from spells are handled.

Fixed casting location spells was deeply broken.

--- a/WarlockGame.Core/settings.ini
+++ b/WarlockGame.Core/settings.ini
@@ -25,3 +25,6 @@ edgeScrollSpeed=10
 keyScrollSpeed=8
 middleMouseLookSensitivity=1
 mapEdgeScrollLimitBoundary=100
+
+[debug]
+boundingBoxVisualize=false
