Fix not clearing living warlock index on game reset

--- a/NeonShooter.DesktopGL/NeonShooter.DesktopGL.csproj
+++ b/NeonShooter.DesktopGL/NeonShooter.DesktopGL.csproj
@@ -33,4 +33,9 @@
   <ItemGroup>
     <ProjectReference Include="..\WarlockGame.Core\WarlockGame.Core.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="..\WarlockGame.Core\Content\bin\Windows\WarlockGame\Art\">
+      <Link>Content\Art</Link>
+    </Folder>
+  </ItemGroup>
 </Project>
