--- a/NeonShooter.DesktopGL/NeonShooter.DesktopGL.csproj
+++ b/NeonShooter.DesktopGL/NeonShooter.DesktopGL.csproj
@@ -5,6 +5,7 @@
     <PublishReadyToRun>false</PublishReadyToRun>
     <TieredCompilation>false</TieredCompilation>
     <Nullable>enable</Nullable>
+    <LangVersion>12</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationManifest>app.manifest</ApplicationManifest>
