Add borderless window setting to .ini file and allow setting each edge's scroll width individually.

--- a/WarlockGame.Core/settings.ini
+++ b/WarlockGame.Core/settings.ini
@@ -1,5 +1,6 @@
 screenHeight=1080
 screenWidth=1920
+borderlessWindow=true
 
 logDisplayLevel=ERROR
 logDisplayVisible=true
@@ -20,7 +21,10 @@ pause=p
 openCommandInput=Enter
 
 [interface]
-edgeScrollWidth=15
+edgeScrollWidthTop=15
+edgeScrollWidthBottom=15
+edgeScrollWidthLeft=15
+edgeScrollWidthRight=15
 edgeScrollSpeed=10
 keyScrollSpeed=8
 middleMouseLookSensitivity=1
