Add blink spell

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ WarlockGame.sln.DotSettings.user
 /.idea/.idea.Monogame/.idea/workspace.xml
 /.idea/
 /WarlockGame.WindowsDX/.mgstats
+/NeonShooter.DesktopGL/.mgstats
+/.mgstats
