Update openGL project and executable name

--- a/WarlockGame.DesktopGL/WarlockGame.DesktopGL.csproj
+++ b/WarlockGame.DesktopGL/WarlockGame.DesktopGL.csproj
@@ -6,6 +6,8 @@
     <TieredCompilation>false</TieredCompilation>
     <Nullable>enable</Nullable>
     <LangVersion>12</LangVersion>
+    <AssemblyName>WarlockGame.DesktopGL</AssemblyName>
+    <RootNamespace>WarlockGame.DesktopGL</RootNamespace>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationManifest>app.manifest</ApplicationManifest>
