--- a/WarlockGame.DesktopGL/WarlockGame.DesktopGL.csproj
+++ b/WarlockGame.DesktopGL/WarlockGame.DesktopGL.csproj
@@ -8,6 +8,8 @@
     <LangVersion>12</LangVersion>
     <AssemblyName>WarlockGame.DesktopGL</AssemblyName>
     <RootNamespace>WarlockGame.DesktopGL</RootNamespace>
+    <AssemblyVersion>1.0.0</AssemblyVersion>
+    <FileVersion>1.0.0</FileVersion>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationManifest>app.manifest</ApplicationManifest>
