--- a/WarlockGame.Core/WarlockGame.Core.csproj
+++ b/WarlockGame.Core/WarlockGame.Core.csproj
@@ -26,18 +26,18 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="LiteNetLib" Version="1.3.1" />
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="10.0.0-preview.3.25171.5" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="10.0.0-preview.3.25171.5" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Ini" Version="10.0.0-preview.3.25171.5" />
-    <PackageReference Include="MonoGame.Extended" Version="4.1.0" />
+    <PackageReference Include="LiteNetLib" Version="2.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="10.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="10.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Ini" Version="10.0.3" />
+    <PackageReference Include="MonoGame.Extended" Version="5.3.1" />
     <PackageReference Include="MonoGame.Extended.Graphics" Version="3.8.0" />
-    <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.3">
+    <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.4.1">
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
     <PackageReference Include="OneOf" Version="3.0.271" />
     <PackageReference Include="TextCopy" Version="6.2.1" />
-    <PackageReference Include="ZLinq" Version="1.4.6" />
+    <PackageReference Include="ZLinq" Version="1.5.5" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\bin\Windows" />
